Changes to support command line options in orchestrion